@@ -601,11 +601,6 @@ class TestTableLifecycle:
         finally:
             await atable.drop()
 
-    # TODO: open to Astra DB once available
-    @pytest.mark.skipif(
-        IS_ASTRA_DB,
-        reason="Text indexes not on Astra DB yet",
-    )
     @pytest.mark.describe("test of text indexes, async")
     async def test_table_textindexes_async(
         self,
