@@ -595,11 +595,6 @@ class TestTableLifecycle:
         finally:
             table.drop()
 
-    # TODO: open to Astra DB once available
-    @pytest.mark.skipif(
-        IS_ASTRA_DB,
-        reason="Text indexes not on Astra DB yet",
-    )
     @pytest.mark.describe("test of text indexes, sync")
     def test_table_textindexes_sync(
         self,
